downgrade next to work with cloudflare workers

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,7 +3,12 @@
 	"main": ".open-next/worker.js",
 	"name": "va-website",
 	"compatibility_date": "2026-01-03",
-	"compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
+	"compatibility_flags": ["nodejs_compat"],
+	"env": {
+		"production": {
+			"compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"]
+		}
+	},
 	"assets": {
 		"directory": ".open-next/assets",
 		"binding": "ASSETS"
